@@ -4,7 +4,8 @@ This file lists the incompatible changes between Version 2.x and older versions
     removed. If needed, write your own helper function using bnf.fu and bnf.tu.
   - lfunconductor(L, [a,b]) no longer supported to look for conductor in
     interval [a,b]; implement lfunconductor(L, list of potential N) instead
-  - renamed GP function Strchr -> strchr (pari_strchr in libpari)
+  - renamed GP functions Strchr -> strchr (pari_strchr in libpari),
+    Strexpand -> strexpand
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the bid struct from idealstar has changed, the new format is not
