@@ -305,7 +305,7 @@ mode.\hfil\break
 \centerline{(PARI-GP version \PARIversion)}
 
 \li{get \kbd{\$VAR} from environment}{getenv$($\kbd{"VAR"}$)$}
-\li{expand env. variable in string}{Strexpand$(x)$}
+\li{expand env. variable in string}{strexpand$(x)$}
 
 \section{Parallel evaluation}
 These functions evaluate their arguments in parallel (pthreads or MPI);
