@@ -12978,7 +12978,7 @@ but returns a \typ{STR}, not a malloc'ed string.
 \fun{GEN}{Strtex}{GEN g} as \tet{RgV_to_str} with output format \tet{f_TEX},
 but returns a \typ{STR}, not a malloc'ed string.
 
-\fun{GEN}{Strexpand}{GEN g} as \tet{RgV_to_str} with output format \tet{f_RAW},
+\fun{GEN}{strexpand}{GEN g} as \tet{RgV_to_str} with output format \tet{f_RAW},
 performing tilde and environment expansion on the result. Returns a
 \typ{STR}, not a malloc'ed string.
 
