@@ -1,5 +1,5 @@
-Strexpand("~root")
-#Strexpand("~") > 1
-Strexpand("$AAA, $BBB, $AAA")
+strexpand("~root")
+#strexpand("~") > 1
+strexpand("$AAA, $BBB, $AAA")
 getenv("AAA")
 getenv("__DOES_NOT_EXIST__")
